[gd_scene load_steps=6 format=3 uid="uid://c8gpa1figwpvw"]

[ext_resource type="Script" uid="uid://dscmtgsgoceyd" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyDefinition/UIMorphologyDefinition.gd" id="1_y81lm"]
[ext_resource type="PackedScene" uid="uid://dbmhqblcfnapj" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Composite/ElementMorphologyCompositeView.tscn" id="2_k4tyy"]
[ext_resource type="Script" uid="uid://dg0vj5dqxb606" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/TextInput.gd" id="3_38a6c"]
[ext_resource type="PackedScene" uid="uid://d1tg3odgc36tb" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Vectors/ElementMorphologyVectorsView.tscn" id="3_vddmv"]
[ext_resource type="PackedScene" uid="uid://ddn8pt45rca4n" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyDefinition/Specific_Types/Pattern/ElementMorphologyPatternView.tscn" id="4_elcaa"]

[node name="SmartMorphologyView" type="VBoxContainer"]
script = ExtResource("1_y81lm")

[node name="Header" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Header"]
layout_mode = 2

[node name="Title" type="Label" parent="Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name: "

[node name="Title_text" type="LineEdit" parent="Header/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
placeholder_text = "None Loaded..."
alignment = 1
editable = false
script = ExtResource("3_38a6c")

[node name="HBoxContainer2" type="HBoxContainer" parent="Header"]
layout_mode = 2

[node name="Pattern" type="Label" parent="Header/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Type: "

[node name="Pattern_Text" type="LineEdit" parent="Header/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
placeholder_text = "None Loaded..."
alignment = 1
editable = false
script = ExtResource("3_38a6c")

[node name="ElementMorphologyCompositeView" parent="." instance=ExtResource("2_k4tyy")]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="ElementMorphologyVectorsView" parent="." instance=ExtResource("3_vddmv")]
visible = false
layout_mode = 2

[node name="ElementMorphologyPatternView" parent="." instance=ExtResource("4_elcaa")]
visible = false
layout_mode = 2
size_flags_vertical = 3
